@@ -26,6 +26,7 @@
 17. Fix 'Reload' action in 'Random albums/releases' within genre.
 18. Highlight section headers if match during 'Search within list'.
 19. Re-order some '...' menu entries.
+20. Add entries for section headers into jumplist.
 
 4.2.2
 -----
